# CVAlgorithms

./: .gitignore  README.md
Boilerplates/: example.cxx
Border/: CMakeLists.txt  border.cxx
Camera/: CMakeLists.txt  open_cv_camera.cxx  open_cv_camera_t.cxx  opencv_undistort.cxx
Characterization/: CMakeLists.txt  characterization.cxx
Color Channels/: 01_color_channels_itk.cxx  01_color_channels_ocv.cxx
Otsu/: CMakeLists.txt  example.cxx  otsu.cxx
Pyramid/: CMakeLists.txt  example.cxx  filters_camacho_florido.cxx
RegionGrowing/: CMakeLists.txt  RegionGrow.cxx
Scale/: 02_scale_itk.cxx  02_scale_ocv.cxx
Segmentation/: CMakeLists.txt  segmentation.cxx
TallerTransf/: CMakeLists.txt
Transformations/: Camacho_Florido_Transformaciones.cxx
intro_itk_ocv/: 03_image_process_itk.cxx  03_image_process_ocv.cxx  CMakeLists.txt
